SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/App_Permission__c.object
<CustomObject>
    <fields>
        <fullName>App_Name__c</fullName>
        <formula>Listing__r.asb_App__r.Name</formula>
        <label>App Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_ORG_Case_Id__c</fullName>
        <label>Component ORG Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_ORG_Case_Number__c</fullName>
        <description>Component ORG Case Number, Auto-populated by the system as response to SendRequest</description>
        <inlineHelpText>Component ORG Case Number, Auto-populated by the system as response to SendRequest</inlineHelpText>
        <label>Component ORG Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Request_Granted__c</fullName>
        <label>Date Request Granted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Request_Initiated__c</fullName>
        <label>Date Request Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Request_Received__c</fullName>
        <label>Date Request Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Request_Rejected__c</fullName>
        <label>Date Request Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Request_Revoked__c</fullName>
        <label>Date Request Revoked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FedIdAppUniqueId__c</fullName>
        <formula>User__r.FederationIdentifier +  Listing__r.asb_App__r.App_Unique_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedIdAppUniqueId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Email__c</fullName>
        <formula>Listing__r.asb_App__r.Helpdesk_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helpdesk Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Hours__c</fullName>
        <formula>Listing__r.asb_App__r.Helpdesk_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helpdesk Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Name__c</fullName>
        <formula>Listing__r.asb_App__r.Helpdesk_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helpdesk Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Phone_NA__c</fullName>
        <formula>IF((Helpdesk_Phone__c == &quot;&quot;),&quot;NA&quot;,Helpdesk_Phone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helpdesk Phone NA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Phone__c</fullName>
        <formula>Listing__r.asb_App__r.Helpdesk_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helpdesk Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipName>Applauncher_App_Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Comment__c</fullName>
        <description>Rejection Comment</description>
        <label>Rejection Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Comment__c</fullName>
        <description>Requester Comment: Provided by the requester to describe the app module/role.</description>
        <inlineHelpText>Requester Comment: Provided by the requester to describe the app module/role.</inlineHelpText>
        <label>Requester Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revocation_Comment__c</fullName>
        <description>Revocation Comment</description>
        <label>Revocation Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Initiated</fullName>
                </value>
                <value>
                    <fullName>Request Received</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Record_Id__c</fullName>
        <label>User Record Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applauncher_App_Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>App Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>App_Name__c</columns>
        <columns>User__c</columns>
        <columns>Status__c</columns>
        <columns>Listing__c</columns>
        <columns>FedIdAppUniqueId__c</columns>
        <columns>Component_ORG_Case_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P{0000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>